--- a/templates/characters.html
+++ b/templates/characters.html
@@ -1,19 +1,43 @@
 {% extends 'base.html' %}
 
-{% block title %}About{% endblock %}
+{% block title %}Characters{% endblock %}
 
 {% block content %}
 <section>
   <article class="container">
-    <h2>About {{ data.config['app_name'] }}</h2>
+    <h2>List of available characters</h2>
     <p>
-      This is an application developped by {{ data.config['app_author'] }} for the first coursework
-      in the module with the barbaric name of SET09103. This module is refered to as
-      "Advanced Web Technologies".
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt massa at placerat vehicula.
+      Nulla feugiat pellentesque fermentum. Pellentesque habitant morbi tristique senectus et netus et
+      malesuada fames ac turpis egestas. Fusce tempus maximus elit vitae lobortis. Praesent nec ornare velit,
+      nec pulvinar ante. Aenean laoreet turpis dui. Proin nec magna ut magna dignissim fringilla.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in quam nec magna dignissim venenatis.
+      Integer consectetur justo libero, vitae imperdiet mi tincidunt id. Aenean facilisis pretium feugiat.
     </p>
   </article>
   <article class="container">
-    fwdxgfv
+    <div class="item-list">
+      {% for char in data.list %}
+        {{ mCommon.charCard(char, data.config) }}
+      {% endfor %}
+    </div>
+    <nav class="pagination-nav" aria-label="...">
+      <ul class="pagination">
+        <li class="disabled">
+          <a href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+        <li><a href="?page=2">2</a></li>
+        <li><a href="?page=3">3</a></li>
+        <li>
+          <a href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </article>
 </section>
 {% endblock %}
