--- a/templates/universe-details.html
+++ b/templates/universe-details.html
@@ -1,19 +1,75 @@
 {% extends 'base.html' %}
 
-{% block title %}About{% endblock %}
+{% block title %}Universe: {{data.univ.name}}{% endblock %}
 
 {% block content %}
 <section>
-  <article class="container">
-    <h2>About {{ data.config['app_name'] }}</h2>
-    <p>
-      This is an application developped by {{ data.config['app_author'] }} for the first coursework
-      in the module with the barbaric name of SET09103. This module is refered to as
-      "Advanced Web Technologies".
-    </p>
-  </article>
-  <article class="container">
-    fwdxgfv
-  </article>
+  <header class="details-head">
+    <img class="details-backpic" src="{{data.univ.pic}}" alt="Universe image" />
+    <h2 class="details-title"><small>#{{data.univ.id}}</small> Universe: {{data.univ.name}}</h2>
+  </header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <article>
+          <h3>Details</h3>
+          <p class="details-shortdesc"><i>{{ data.univ.short_desc|safe }}</i></p>
+          <p class="details-fulldesc">{{ data.univ.full_desc|safe }}</p>
+        </article>
+        <article>
+          <h3>Tags</h3>
+          <ul class="item-tags">
+            {% for tag in data.univ.tags %}
+              <li class="item-tag"><i class="fa fa-tag"></i> <a href="/universes?tags={{tag}}" class="text">{{ tag }}</a></li>
+            {% endfor %}
+          </ul>
+        </article>
+        <article>
+          <h3>Linked characters</h3>
+          <b>TODO!!</b>
+        </article>
+      </div>
+      <aside class="col-md-3">
+        <h3>Medias</h3>
+        <div class="list-group">
+          {% if 'tv_series' in data.univ.medias %}
+            <div class="list-group-item">
+              <h4 class="list-group-item-heading">TV Series</h4>
+              <p class="lis-group-item-text">
+                {% for val in data.univ.medias.tv_series %}
+                  <a target="_blank" href="http://www.imdb.com/title/{{ val }}">IMDB</a>
+                {% endfor %}
+              </p>
+            </div>
+          {% endif %}
+          {% if 'movies' in data.univ.medias %}
+            <div class="list-group-item">
+              <h4 class="list-group-item-heading">Movies</h4>
+              <p class="lis-group-item-text">
+                {% for val in data.univ.medias.movies %}
+                  <a target="_blank" href="http://www.imdb.com/title/{{ val }}">IMDB</a>
+                {% endfor %}
+              </p>
+            </div>
+          {% endif %}
+          {% if 'books' in data.univ.medias %}
+            <div class="list-group-item">
+              <h4 class="list-group-item-heading">Books</h4>
+              <p class="lis-group-item-text">
+                {% for val in data.univ.medias.books %}
+                  <a target="_blank" href="http://www.isbnsearch.org/isbn/{{ val }}">ISBN Search</a>
+                {% endfor %}
+              </p>
+            </div>
+          {% endif %}
+          {% if not data.univ.medias %}
+            <div class="list-group-item">
+              <b>No registered medias.</b>
+            </div>
+          {% endif %}
+        </div>
+      </aside>
+    </div>
+  </div>
 </section>
 {% endblock %}
