--- a/templates/universes.html
+++ b/templates/universes.html
@@ -17,7 +17,7 @@
     </p>
   </article>
   <article class="container">
-    <div class="">
+    <div class="item-list">
       {% for univ in data.list %}
         {{ mCommon.univCard(univ, data.config) }}
       {% endfor %}
