--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -64,8 +64,9 @@ header.details-head {
   background-color: #1F1E23;
   max-height: 350px;
   margin-bottom: 20px;
-  box-shadow: 0px 5px 5px;
+  box-shadow: 0px 3px 3px;
   position: relative;
+  bottom: 10px;
 }
 
 header.details-head .details-backpic {
@@ -74,6 +75,9 @@ header.details-head .details-backpic {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  top: 10px;
+  box-shadow: 0px 6px 6px;
 }
 
 header.details-head h2.details-title {
