--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -57,6 +57,53 @@ body {
   margin-right: 7px;
 }
 
+/* --- Item Link --- */
+.item-link {
+  height: 60px;
+  width: 100%;
+  margin-bottom: 5px;
+  border: 1px solid #AAA;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #EEE;
+  display: block;
+  color: #333;
+  position: relative;
+}
+
+.item-link:hover {
+  border: 1px solid #999;
+  color: #333;
+  background-color: #DDD;
+}
+
+.item-link > i.fa {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #DDD;
+  font-size: 40px;
+}
+
+.item-link:hover > i.fa {
+  color: #AAA;
+}
+
+.item-link > div:first-child {
+  background-image: url("/static/img/bg_01.jpg");
+  border-right: 2px solid #AAA;
+  height: 58px;
+  padding: 0px;
+}
+
+.item-link .item-pic, .item-link .item-imgLink {
+  max-width: 100%;
+  max-height: 58px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* --- Details --- */
 /* Details */
 header.details-head {
