--- a/templates/character-details.html
+++ b/templates/character-details.html
@@ -27,25 +27,26 @@
         <div class="row">
           <article class="col-md-6">
             <h3>Allies</h3>
-            <ul class="details-allies">
+            <div class="item-link-list">
               {% for ally in data.char.allies %}
-                <li class="details-allies-item"><i class="fa fa-user"></i> <a href="/characters/{{ally.id}}" class="text">{{ ally.name }}</a></li>
+                {{ mCommon.charLink(ally, data.config) }}
               {% endfor %}
-            </ul>
+            </div>
           </article>
           <article class="col-md-6">
             <h3>Enemies</h3>
             <ul class="details-enemies">
+            <div class="item-link-list">
               {% for enemy in data.char.enemies %}
-                <li class="details-enemies-item"><i class="fa fa-user"></i> <a href="/characters/{{enemy.id}}" class="text">{{ enemy.name }}</a></li>
+                {{ mCommon.charLink(enemy, data.config) }}
               {% endfor %}
-            </ul>
+            </div>
           </article>
         </div>
       </div>
       <aside class="col-md-3">
         <h3>Universe</h3>
-        <a href="/universes/{{data.char.universe.id}}"><b>{{data.char.universe.name}}</b> details ...</a>
+        {{ mCommon.univLink(data.char.universe, data.config) }}
       </aside>
     </div>
   </div>
