--- a/templates/macro_common.html
+++ b/templates/macro_common.html
@@ -37,6 +37,23 @@
     </div>
 {% endmacro %}
 
+{% macro univLink(univ, config) %}
+    <a class="item-link" href="/universes/{{univ.id}}">
+      <div class="col-xs-4">
+        {% if univ.pic %}
+          <img class="item-pic" src="{{ univ.pic }}" alt="Universe picture" />
+        {% else %}
+          <img class="item-pic" src="{{ url_for('static', filename=config.graphic.default_universe_pic) }}" alt="Universe picture" />
+        {% endif %}
+      </div>
+      <div class="col-xs-8">
+        <small class="item-id">#{{ univ.id }}</small>
+        <h4>{{ univ.name }}</h4>
+      </div>
+      <i class="fa fa-caret-right"></i>
+    </a>
+{% endmacro %}
+
 {% macro charCard(char, config) %}
     <div class="item-card col-md-12">
       <div class="row">
@@ -44,7 +61,7 @@
           {% if char.pic %}
             <img class="item-pic" src="{{ char.pic }}" alt="Character picture" />
           {% else %}
-            <img class="item-pic" src="{{ url_for('static', filename=config.graphic.default_character_pic) }}" alt="Universe picture" />
+            <img class="item-pic" src="{{ url_for('static', filename=config.graphic.default_character_pic) }}" alt="Character picture" />
           {% endif %}
           <small class="item-id">#{{ char.id }}</small>
         </div>
@@ -70,4 +87,21 @@
         </div>
       </div>
     </div>
+{% endmacro %}
+
+{% macro charLink(char, config) %}
+    <a class="item-link" href="/characters/{{char.id}}">
+      <div class="col-xs-4">
+        {% if char.pic %}
+        <img class="item-pic" src="{{ char.pic }}" alt="Character picture" />
+        {% else %}
+        <img class="item-pic" src="{{ url_for('static', filename=config.graphic.default_character_pic) }}" alt="Character picture" />
+        {% endif %}
+      </div>
+      <div class="col-xs-8">
+        <small class="item-id">#{{ char.id }}</small>
+        <h4>{{ char.name }}</h4>
+      </div>
+      <i class="fa fa-caret-right"></i>
+    </a>
 {% endmacro %}
