--- a/templates/character-details.html
+++ b/templates/character-details.html
@@ -46,7 +46,9 @@
       </div>
       <aside class="col-md-3">
         <h3>Universe</h3>
-        {{ mCommon.univLink(data.char.universe, data.config) }}
+        <div  class="item-link-list">
+          {{ mCommon.univLink(data.char.universe, data.config) }}
+        </div>
       </aside>
     </div>
   </div>
