--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,11 +3,33 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<section>
-  <article  class="container">
-    <h2>Bootstrap test using Flask Python framework</h2>
-    <p class="lead">This is an example paragraph in a demo page for the Bootstrap CSS and JavaScript framework.</p>
-    <p>The content is hosted and served by a python server, using the Flask framework.</p>
+<section class="container">
+  <article>
+    <h1>Welcome to MetaChar</h1>
+    <p>On this application you can acces information on fictional characters and their universes.</p>
+  </article>
+  <div class="row numbers">
+    <h2>Some numbers</h2>
+    <article class="col-md-6">
+      <a class="big-number well well-lg" href="/universes">
+        <i class="fa fa-5x fa-globe"></i>
+        <p><b>{{data.infos.nb_universes}}</b> Universes</p>
+      </a>
+    </article>
+    <article class="col-md-6">
+      <a class="big-number well well-lg" href="/characters">
+        <i class="fa fa-5x fa-user"></i>
+        <p><b>{{data.infos.nb_characters}}</b> Characters</p>
+      </a>
+    </article>
+  </div>
+  <article>
+    <h2>More infos</h2>
+    <p>
+      If you are a curious person why don't you visit the About page. It's free an let's you learn a lot of interesting stuff about this project.<br/>
+      Go on ! And if you want to contact me it's also there.
+    </p>
+    <a class="btn btn-info btn-lg pull-right" href="/about">OK, I'll have a look. <i class="fa fa-arrow-right"></i></a>
   </article>
 </section>
 {% endblock %}
