--- a/src/templates/e404.html
+++ b/src/templates/e404.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section>
   <article  class="container">
-    <h1>Ooops ! <i>Error {{ data.error }}</i></h1>
+    <h1>Ooops ! <i>Error - {{ data.error }}</i></h1>
     <p class="lead">The ressource you are trying to access is not available.</p>
     <p>Try to go back where you came from.</p>
   </article>
