--- a/src/templates/characters.html
+++ b/src/templates/characters.html
@@ -40,7 +40,7 @@
       </div>
       <div class="col-md-2 text-right btn-group">
         <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Search</button>
-        <a href="?" class="btn btn-default"><i class="fa fa-times"></i></a>
+        <a href="/characters" class="btn btn-default"><i class="fa fa-times"></i></a>
       </div>
     </form>
     <hr/>
